--- a/aartics/index.htm
+++ b/aartics/index.htm
@@ -63,12 +63,21 @@
             <polygon id="s94" class="cls-1" points="2391.5 564.5 2426.5 625.5 2572.5 702.5 2526.5 622.5 2391.5 564.5"/>
             <polygon id="_50" data-name="50" class="cls-2" points="2725.61 144.5 2635.54 144.5 2590.5 222.5 2635.54 300.51 2725.61 300.51 2770.64 222.5 2725.61 144.5"/>
             <polygon id="s88" class="cls-1" points="2578.5 292.5 2477.5 292.5 2584.5 272.5 2705.5 272.5 2578.5 292.5"/>
-            <polygon id="_49" data-name="49" class="cls-2" points="2716.96 301.5 2628.04 301.5 2583.59 378.5 2628.04 455.5 2716.96 455.5 2761.41 378.5 2716.96 301.5"/>
-            <polygon id="_48" data-name="48" class="cls-2" points="2809.67 468.5 2706.33 468.5 2654.65 558 2706.33 647.5 2809.67 647.5 2861.35 558 2809.67 468.5"/>
+            <g id="github_box" data-attach="#_49" class="attached raleway">
+                <polygon id="_49" data-name="49" class="cls-2 project_box_soft has_link" points="2716.96 301.5 2628.04 301.5 2583.59 378.5 2628.04 455.5 2716.96 455.5 2761.41 378.5 2716.96 301.5"/>
+                <text x="2000" y="410" data-x-rel="-130" id="linkedinlink" class="projectname"><a href="https://www.linkedin.com/in/aartics" target="_blank">linkedin</a></text>            
+            </g>
+            <g id="github_box" data-attach="#_48" class="attached raleway">
+                <polygon id="_48" data-name="48" class="cls-2 project_box_soft has_link" points="2809.67 468.5 2706.33 468.5 2654.65 558 2706.33 647.5 2809.67 647.5 2861.35 558 2809.67 468.5"/>
+                <text x="2000" y="610" data-x-rel="-130" id="gitlink" class="projectname"><a href="https://github.com/aartics" target="_blank">github</a></text>
+            </g>
             <polygon id="s85" class="cls-1" points="2651.5 621.5 2706.5 647.5 2654.5 557.5 2605.5 541.5 2651.5 621.5"/>
             <polygon id="s66" class="cls-1" points="2670.5 463.5 2706.5 468.5 2654.5 557.5 2622.5 546.5 2670.5 463.5"/>
             <polygon id="_42" data-name="42" class="cls-2" points="2665.48 541.5 2572.52 541.5 2526.05 622 2572.52 702.5 2665.48 702.5 2711.95 622 2665.48 541.5"/>
-            <polygon id="_51" data-name="51" class="cls-2" points="2615.05 50.5 2520.95 50.5 2473.89 132 2520.95 213.5 2615.05 213.5 2662.11 132 2615.05 50.5"/>
+            <g id="resume_box" data-attach="#_51" class="attached raleway">    
+                <polygon id="_51" data-name="51" class="cls-2 project_box_soft has_link" points="2615.05 50.5 2520.95 50.5 2473.89 132 2520.95 213.5 2615.05 213.5 2662.11 132 2615.05 50.5"/>
+                <text x="2000" y="170" data-x-rel="-130" id="resumelink" class="projectname"><a href="aartics_resume.pdf" target="_blank">resume</a></text>
+            </g>
             <polygon id="s87" class="cls-1" points="2386.5 317.5 2426.5 255.5 2765.5 167.5 2705.5 272.5 2386.5 317.5"/>
             <polygon id="s90" class="cls-1" points="2498.5 255.5 2590.5 222.5 2635.5 300.5 2535.5 317.5 2498.5 255.5"/>
             <polygon id="s92" class="cls-1" points="2402.5 214.5 2524.5 167.5 2586.5 63.5 2454.5 126.5 2402.5 214.5"/>
