--- a/aartics/projects/resonateai/index.htm
+++ b/aartics/projects/resonateai/index.htm
@@ -27,12 +27,12 @@
 			<h1><a href="www.aartics.com" id="aartics_go">aartics.com</a>/projects/resonateai</h1>
     </div>
     <div class="scroll">
-        <img src="local_img/resonate1.gif" id="#splash">
+<!--         <img src="local_img/resonate1.gif" id="#splash"> -->
+        <img src="local_img/resonate_splash.png" id="#splash">
     </div>
     <div class="intro">
             <img src="https://s3-us-west-2.amazonaws.com/aartics-portfolio/projects/resonateai/img/resonate_intro_words.png">
     </div>
-    <div class="aartics_resonate_concept"></div>
     <div class="aartics_resonate_personas">
 		<img src="https://s3-us-west-2.amazonaws.com/aartics-portfolio/projects/resonateai/img/resonate_personas.png" height="600px">
     </div>
@@ -43,7 +43,7 @@
 		<img src="https://s3-us-west-2.amazonaws.com/aartics-portfolio/projects/resonateai/img/resonatesystemflow.png" height="610px">
     </div>
     <div class="aartics_resonate_prototype">
-        <video width="740" height="600" controls> <!-- add autoplay and loop -->
+        <video width="740" height="600" autoplay controls loop> <!-- add autoplay and loop -->
           <source src="https://s3-us-west-2.amazonaws.com/aartics-portfolio/projects/resonateai/img/resonate_editor_final.mp4" type="video/mp4">
         </video>		
     </div>
@@ -99,6 +99,11 @@
 		<h1>summary: excerpts from the client's visions</h1>
 		<h2>Our deliverables were very connected to the visions that the CEO of resonate.ai has... these are excerpts captured from the first interview with our team:<br><br><br></h2>
     </div>
+    <div class="aartics_resonate_concept">
+        <video width="740" height="600" autoplay controls loop>
+          <source src="https://s3-us-west-2.amazonaws.com/aartics-portfolio/projects/resonateai/img/resonate_strategy.mp4" type="video/mp4">
+        </video>
+    </div>
 </body>
 <script>
 $(document).ready(function() {
@@ -109,7 +114,7 @@ $(document).ready(function() {
         history.go(1)
     }
 
-    $.jInvertScroll(['.bigheader','.divbackground','.header','.intro','.scroll','.aartics_resonate_concept','.aartics_resonate_personas','.aartics_resonate_comp_analysis','.aartics_resonate_systemflow','.aartics_resonate_prototype','.aartics_resonate_chromemockup','.aartics_resonate_roadmap','.aartics_resonate_interview','.title_text_bar'],{
+    $.jInvertScroll(['.bigheader','.divbackground','.intro','.scroll','.aartics_resonate_personas','.aartics_resonate_comp_analysis','.aartics_resonate_systemflow','.aartics_resonate_chromemockup','.aartics_resonate_roadmap','.aartics_resonate_interview','.title_text_bar','.header','.aartics_resonate_concept','.aartics_resonate_prototype'],{
         height: 16000,                   
         onScroll: function(percent) {
 //             console.log(percent)
