--- a/aartics/projects/allsportsbar/index.html
+++ b/aartics/projects/allsportsbar/index.html
@@ -22,31 +22,31 @@
   <div class="image-title">
   This is a pic
   </div>
-  <img src="https://s3-us-west-2.amazonaws.com/aartics-portfolio/test/001_all_sports_banner.png">
+  <img src="local_img/001_all_sports_banner.png">
   <div class="image-title">
   This is a pic
   </div>
-  <img src="https://s3-us-west-2.amazonaws.com/aartics-portfolio/test/	allsports_intro.png">
+  <img src="local_img/allsports_intro.png">
   <div class="image-title">
   This is a pic
   </div>
-  <img src="https://s3-us-west-2.amazonaws.com/aartics-portfolio/test/003_allsports_01_pic.png">
+  <img src="local_img/003_allsports_01_pic.png">
   <div class="image-title">
   This is a pic
   </div>
-  <img src="https://s3-us-west-2.amazonaws.com/aartics-portfolio/test/002_allsports_02_view.png">
+  <img src="local_img/002_allsports_02_view.png">
   <div class="image-title">
   This is a pic
   </div>
-  <img src="https://s3-us-west-2.amazonaws.com/aartics-portfolio/test/	allsports_03_plan.png">
+  <img src="local_img/allsports_03_plan.png">
   <div class="image-title">
   This is a pic
   </div>
-  <img src="https://s3-us-west-2.amazonaws.com/aartics-portfolio/test/allsports_04_pic.png">
+  <img src="local_img/allsports_04_pic.png">
   <div class="image-title">
   This is a pic
   </div>
-  <img src="https://s3-us-west-2.amazonaws.com/aartics-portfolio/test/all_sports_end_arris.png">
+  <img src="local_img/all_sports_end_arris.png">
 </div>
 
 
