--- a/aartics/projects/allsportsbar/index.html
+++ b/aartics/projects/allsportsbar/index.html
@@ -6,13 +6,13 @@
   <title>aartics_sports_bar</title>
   <meta name="aartics portfolio" content="aartics portfolio">
   <meta name="aarti c sharma" content="aartics_portfolio">
-  <link rel="stylesheet" href="../aartics_projects.css">
+  <link rel="stylesheet" href="css/aartics_projects.css">
 </head>
 
 <body>
 <div id="header-wrapper">
   <div id="header-banner">
-    <div id="back-button"><a href="/">Back</a></div>
+    <div id="back-button"><a href="aartics.com">Back</a></div>
     <span class="project-name">
       all sports bar
     </span>
