--- a/aartics/projects/allsportsbar/index.htm
+++ b/aartics/projects/allsportsbar/index.htm
@@ -6,7 +6,7 @@
   <title>aartics_sports_bar</title>
   <meta name="aartics portfolio" content="aartics portfolio">
   <meta name="aarti c sharma" content="aartics_portfolio">
-  <link rel="stylesheet" href="css/aartics_projects.css">
+  <link rel="stylesheet" href="../aartics_projects.css">
 </head>
 
 <body>
@@ -19,18 +19,13 @@
   </div>
 </div>
 <div id="project-content">
-  <div class="image-title">
-  This is a pic
-  </div>
-  <img src="local_img/001_all_sports_banner.png">
+  <img id="splash" src="local_img/001_all_sports_banner.png">
+
   <div class="image-title">
   This is a pic
   </div>
   <img src="local_img/allsports_intro.png">
-  <div class="image-title">
-  This is a pic
-  </div>
-  <img src="local_img/003_allsports_01_pic.png">
+
   <div class="image-title">
   This is a pic
   </div>
@@ -42,6 +37,10 @@
   <div class="image-title">
   This is a pic
   </div>
+  <div class="image-title">
+  This is a pic
+  </div>  
+  <img src="local_img/003_allsports_01_pic.png">
   <img src="local_img/allsports_04_pic.png">
   <div class="image-title">
   This is a pic
