--- a/aartics/projects/coimbatore/index.htm
+++ b/aartics/projects/coimbatore/index.htm
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>aartics_sports_bar</title>
+  <title>aartics_coimbatore</title>
   <meta name="aartics portfolio" content="aartics portfolio">
   <meta name="aarti c sharma" content="aartics_portfolio">
   <link rel="stylesheet" href="../aartics_projects.css">
@@ -14,7 +14,7 @@
   <div id="header-banner">
     <div id="back-button"><a href="aartics.com">Back</a></div>
     <span class="project-name">
-      all sports bar
+      mall at coimbatore
     </span>
   </div>
 </div>
@@ -24,28 +24,32 @@
   <div class="image-title">
   This is a pic
   </div>
-  <img src="local_img/allsports_intro.png">
+  <img src="local_img/coimbatore_intro.png">
 
   <div class="image-title">
   This is a pic
   </div>
-  <img src="local_img/002_allsports_02_view.png">
+  <img src="local_img/coimbatore_plan1.png">
   <div class="image-title">
   This is a pic
   </div>
-  <img src="local_img/allsports_03_plan.png">
+  <img src="local_img/coimbatore_plan23.png">
   <div class="image-title">
   This is a pic
   </div> 
-  <img src="local_img/003_allsports_01_pic.png">
+  <img src="local_img/coimbatore_view1.png">
   <div class="image-title">
   This is a pic
   </div> 
-  <img src="local_img/allsports_04_pic.png">
+  <img src="local_img/coimbatore_view2.png">
   <div class="image-title">
   This is a pic
-  </div>
-  <img src="local_img/all_sports_end_arris.png">
+  </div> 
+  <img src="local_img/coimbatore_view3.png">
+  <div class="image-title">
+  This is a pic
+  </div> 
+  <img src="local_img/coimbatore_view4.png">
 </div>
 
 
