--- a/aartics/projects/graphics/index.htm
+++ b/aartics/projects/graphics/index.htm
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>aartics_sports_bar</title>
+  <title>aartics_graphics</title>
   <meta name="aartics portfolio" content="aartics portfolio">
   <meta name="aarti c sharma" content="aartics_portfolio">
   <link rel="stylesheet" href="../aartics_projects.css">
@@ -14,38 +14,22 @@
   <div id="header-banner">
     <div id="back-button"><a href="aartics.com">Back</a></div>
     <span class="project-name">
-      all sports bar
+      graphics to identify self-enablement
     </span>
   </div>
 </div>
 
 <div id="project-content">
   <img id="cover" src="local_img/001.png"/>
-  <div class="image-title">
-  This is a pic
-  </div>
-  <img src="local_img/allsports_intro.png">
 
   <div class="image-title">
   This is a pic
   </div>
-  <img src="local_img/002_allsports_02_view.png">
+  <img src="local_img/001_clipart.png">
   <div class="image-title">
   This is a pic
   </div>
-  <img src="local_img/allsports_03_plan.png">
-  <div class="image-title">
-  This is a pic
-  </div> 
-  <img src="local_img/003_allsports_01_pic.png">
-  <div class="image-title">
-  This is a pic
-  </div> 
-  <img src="local_img/allsports_04_pic.png">
-  <div class="image-title">
-  This is a pic
-  </div>
-  <img src="local_img/all_sports_end_arris.png">
+  <img src="local_img/002_ganesh.png">
 </div>
 
 
