new layout for cover

--- a/aartics/projects/graphics/index.htm
+++ b/aartics/projects/graphics/index.htm
@@ -14,7 +14,7 @@
   <div id="header-banner">
     <div id="back-button"><a href="aartics.com">Back</a></div>
     <span class="project-name">
-      graphics to identify self-enablement
+      graphics for self-enablement
     </span>
   </div>
 </div>
@@ -26,10 +26,6 @@
   This is a pic
   </div>
   <img src="local_img/001_clipart.png">
-  <div class="image-title">
-  This is a pic
-  </div>
-  <img src="local_img/002_ganesh.png">
 </div>
 
 
