--- a/aartics/index.htm
+++ b/aartics/index.htm
@@ -12,14 +12,9 @@
 <body>
     <div class="bigheader">
         <svg id="message" xmlns="http://www.w3.org/2000/svg" width="1300" height="1200">
-            <text class="bigmsg" x="60" y="600" id="bighi">hi!</text>
-            <text class="bigmsg" x="60" y="660">i'm aarti's 3D portfolio website. </text> 
-            <text class="bigmsg" x="60" y="720">currently i render well only on laptop</text> 
-            <text class="bigmsg" x="60" y="780">resolution browser windows (1024 X 768), </text>
-            <text class="bigmsg" x="60" y="840">so please experience me there!</text>
-            <text class="bigmsg" x="60" y="920">but until the mobile magic gets ready,</text>
-            <text class="bigmsg" x="60" y="980">click these links to see </text>
-            <text class="bigmsg" x="60" y="1040"><a href="aartics_resume.pdf" target="_blank">aarti’s resume &nbsp; |</a><a href="https://www.linkedin.com/in/aartics" target="_blank">&nbsp; linkedin profile.</a></text>
+            <text class="bigmsg" x="60" y="600">hi! this experience is best viewed on</text> 
+            <text class="bigmsg" x="60" y="660">desktops. adaptive version coming soon...</text> 
+            <text class="bigmsg" x="60" y="720">- aarti c sharma &nbsp;<a href="aartics_resume.pdf" target="_blank">resume &nbsp; |</a><a href="https://www.linkedin.com/in/aartics" target="_blank">&nbsp; linkedin</a></text>
         </svg>
     </div>
     <div class="header">
@@ -303,10 +298,10 @@
             </clipPath>
                 <image width="350" height="220" x="800" y="490" data-x-rel="-300" xlink:href="img/wl_intro.png" class="image" id="wpimg"/>
                 <polygon id="_18" data-name="18" class="cls-2 project_box has_link" points="1036.3 490.5 909.86 490.5 846.64 600 909.86 709.5 1036.3 709.5 1099.52 600 1036.3 490.5"/>
-                <text x="925" y="515" data-x-rel="-175" id="tw1" class="casestudy"><a href="projects/wolflion" target="_blank">UX CASE STUDY:</a></text>
-                <text x="930" y="550" data-x-rel="-170" id="tw2" class="projectdescription"><a href="projects/wolflion" target="_blank">an online pet</a></text>
-                <text x="920" y="570" data-x-rel="-180" id="tw3" class="projectdescription"><a href="projects/wolflion" target="_blank">store experience</a></text>
-                <text x="920" y="685" data-x-rel="-180" id="tw4" class="projectname"><a href="projects/wolflion" target="_blank">wolf &amp; lion</a></text>
+                <text x="925" y="515" data-x-rel="-175" id="tw1" class="casestudy"><a href="https://invis.io/THAEZ03UR" target="_blank">UX CASE STUDY:</a></text>
+                <text x="930" y="550" data-x-rel="-170" id="tw2" class="projectdescription"><a href="https://invis.io/THAEZ03UR" target="_blank">an online pet</a></text>
+                <text x="920" y="570" data-x-rel="-180" id="tw3" class="projectdescription"><a href="https://invis.io/THAEZ03UR" target="_blank">store experience</a></text>
+                <text x="920" y="685" data-x-rel="-180" id="tw4" class="projectname"><a href="https://invis.io/THAEZ03UR" target="_blank">wolf &amp; lion</a></text>
             </g>
 
             <g id="resonate_ai_box" data-attach="#_7" class="attached" style="clip-path: url(#clipPath_resonate_box);" data-clip-path="#clipPath_resonate_box">
