--- a/aartics/projects/sfac/index.htm
+++ b/aartics/projects/sfac/index.htm
@@ -1,62 +1,42 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+
+<html lang="en">
 <head>
-	<meta charset="utf-8" />
-	<title>aartics_sfac</title>
-    <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-    <script src="js/jquery.jInvertScroll.js"></script>
-    <link rel="stylesheet" href="css/aartics_sfac.css" />
+  <meta charset="utf-8">
+  <title>aartics_sfac</title>
+  <meta name="aartics portfolio" content="aartics portfolio">
+  <meta name="aarti c sharma" content="aartics_portfolio">
+  <link rel="stylesheet" href="../aartics_projects.css">
 </head>
+
 <body>
-    <div class="bigheader">
-		<svg id="message" xmlns="http://www.w3.org/2000/svg" width="1300" height="1200">
-		    <text class="bigmsg" x="60" y="600" id="bighi">hi!</text>
-		    <text class="bigmsg" x="60" y="660">i’m aartics.com and i’m</text> 
-		    <text class="bigmsg" x="60" y="720">aarti's 3D portfolio website. </text> 
-		    <text class="bigmsg" x="60" y="780">currently i render well only on laptop</text> 
-		    <text class="bigmsg" x="60" y="840">resolution browser windows (1024 X 768), </text>
-		    <text class="bigmsg" x="60" y="900">so please experience me there!</text>
-		    <text class="bigmsg" x="60" y="980">but until the mobile magic gets ready,</text>
-		    <text class="bigmsg" x="60" y="1040">click these links to see </text>
-		    <text class="bigmsg" x="60" y="1100"><a href="aartics_resume.pdf" target="_blank">aarti’s resume</a></text>
-		    <text class="bigmsg" x="60" y="1160"><a href="https://www.linkedin.com/in/aartics" target="_blank">or her linkedin profile.</a></text>
-		</svg>
-    </div>
-    <div class="header">
-			<h1>aartics.com/projects/sfac</h1>
-    </div>
-    <div class="scroll">
-			<img src="local_img/sfac_intro.png" id=#splash>
-    </div>
+<div id="header-wrapper">
+  <div id="header-banner">
+    <div id="back-button"><a href="aartics.com">Back</a></div>
+    <span class="project-name">
+      public voting app for sfac
+    </span>
+  </div>
+</div>
+
+<div id="project-content">
+  <img id="cover" src="local_img/001.png"/>
+  <img src="local_img/sfac_002.png">
+  <img src="local_img/sfac_strategy_gif.gif">
+  <img src="local_img/sfac_solution.png">
+  <video width="740" height="600" autoplay controls loop>
+    <source src="local_img/aartics_sfac_votingapp.mp4" type="video/mp4">
+  </video>
+  <img src="local_img/sfac_logo.png">
+  <img src="local_img/sfac_prototype.png">
+  <div class="image-title">
+  <video width="740" height="600" autoplay controls loop>
+    <source src="local_img/sfac_feedback.mp4" type="video/mp4">
+  </video>
+</div>
 
 
-
-
-
-<!--     <div class="aartics_sfac_votingapp">
-    <h2>Video of the application</h2>
-        <video width="740" height="600" controls>
-          <source src="https://s3-us-west-2.amazonaws.com/aartics-portfolio/projects/sfac/img/aartics_sfac_votingapp.mp4" type="video/mp4">
-        </video>
-    </div>   -->  
+  <script>
+  </script>
 </body>
-<script>
-$(document).ready(function() {
-
-    // prevents going back from the site
-    history.pushState(null, null, location.href)
-    window.onpopstate = function(event) {
-        history.go(1)
-    }
-
-    $.jInvertScroll(['.bigheader','.header','.scroll','.aartics_sfac_votingapp'], {
-        height: 11000,                   
-        onScroll: function(percent) {
-//             console.log(percent)
-        }
-    })
-
-})
-</script>
 </html>
