aartics_concept in, top message improved

--- a/aartics/index.htm
+++ b/aartics/index.htm
@@ -12,9 +12,9 @@
 <body>
     <div class="bigheader">
         <svg id="message" xmlns="http://www.w3.org/2000/svg" width="1300" height="1200">
-            <text class="bigmsg" x="60" y="600">hi! this experience is best viewed on</text> 
-            <text class="bigmsg" x="60" y="660">desktops. adaptive version coming soon...</text> 
-            <text class="bigmsg" x="60" y="720">- aarti c sharma &nbsp;<a href="aartics_resume.pdf" target="_blank">resume &nbsp; |</a><a href="https://www.linkedin.com/in/aartics" target="_blank">&nbsp; linkedin</a></text>
+            <text class="bigmsg" x="60" y="650">hi! i render best on desktop browsers.</text> 
+            <text class="bigmsg" x="60" y="700">mobile version coming soon.</text> 
+            <text class="bigmsg" x="60" y="750">- aarti c sharma &nbsp;<a href="aartics_resume.pdf" target="_blank">resume &nbsp; |</a><a href="https://www.linkedin.com/in/aartics" target="_blank">&nbsp; linkedin</a></text>
         </svg>
     </div>
     <div class="header">
@@ -247,12 +247,12 @@
                 </clipPath>
                 <image width="350" height="300" x="420" y="430" data-x-rel="-300" xlink:href="../img/3d_intro.png" class="image" id="3dimg"/>
                 <polygon id="_3" data-name="3" class="cls-2 project_box has_link" points="658.07 488.5 533.93 488.5 471.87 596 533.93 703.5 658.07 703.5 720.13 596 658.07 488.5"/>
-                <text x="500" y="575" data-x-rel="-200" id="3d9">designing</text>
-                <text x="620" y="575" data-x-rel="-100" id="3d10">a 3D +</text>
-                <text x="500" y="605" data-x-rel="-210" id="3d11">inverse +</text>
-                <text x="602" y="605" data-x-rel="-120" id="3d12">panaromic</text>
-                <text x="500" y="635" data-x-rel="-170" id="3d13">=D</text>
-                <text x="587" y="635" data-x-rel="-135" id="3d14">website</text>
+                <text x="500" y="575" data-x-rel="-200" id="3d9" class="projectname"><a href="projects/aartics_concept" target="_blank">designing</a></text>
+                <text x="620" y="575" data-x-rel="-100" id="3d10" class="projectname"><a href="projects/aartics_concept" target="_blank">a 3D +</a></text>
+                <text x="500" y="605" data-x-rel="-210" id="3d11" class="projectname"><a href="projects/aartics_concept" target="_blank">inverse +</a></text>
+                <text x="602" y="605" data-x-rel="-120" id="3d12" class="projectname"><a href="projects/aartics_concept" target="_blank">panaromic</a></text>
+                <text x="500" y="635" data-x-rel="-170" id="3d13" class="projectname"><a href="projects/aartics_concept" target="_blank">=D</a></text>
+                <text x="587" y="635" data-x-rel="-135" id="3d14" class="projectname"><a href="projects/aartics_concept" target="_blank">website</a></text>
             </g>
             <g id="arch_urb_box" data-attach="#_24" class="attached">
                 <polygon id="_24" data-name="24" class="cls-2 project_box_arch has_link" points="1683.91 64.5 1562.09 64.5 1501.18 170 1562.09 275.5 1683.91 275.5 1744.82 170 1683.91 64.5"/>
