--- a/aartics/index.htm
+++ b/aartics/index.htm
@@ -256,8 +256,8 @@
             </g>
             <g id="arch_urb_box" data-attach="#_24" class="attached">
                 <polygon id="_24" data-name="24" class="cls-2 project_box_arch has_link" points="1683.91 64.5 1562.09 64.5 1501.18 170 1562.09 275.5 1683.91 275.5 1744.82 170 1683.91 64.5"/>
-                <text x="2000" y="170" data-x-rel="-190" id="arch1" class="titlearch has_link"><a href="http://tinyurl.com/urbanaarti" target="_blank">architecture &amp;</a></text>
-                <text x="2000" y="190" data-x-rel="-170" id="arch2" class="titlearch has_link"><a href="http://tinyurl.com/urbanaarti" target="_blank">urbanism</a></text>
+                <text x="2000" y="170" data-x-rel="-190" id="arch1" class="titlearch has_link"><a href="projects/aartics_architecture.pdf" target="_blank">architecture &amp;</a></text>
+                <text x="2000" y="190" data-x-rel="-170" id="arch2" class="titlearch has_link"><a href="projects/aartics_architecture.pdf" target="_blank">urbanism</a></text>
             </g>
             <polygon id="_20" data-name="20" class="cls-2" points="1500.5 380.51 1378.5 380.51 1317.5 486.17 1378.5 591.82 1500.5 591.82 1561.5 486.17 1500.5 380.51"/>
             <polygon id="xx05" class="cls-1" points="2225.5 556.5 2191.5 545.5 2239.5 462.5 2276.5 468.5 2225.5 556.5"/>
@@ -266,9 +266,9 @@
             <polygon id="xx02" class="cls-1" points="2530.5 292.5 2519.5 297.5 2471.5 379.5 2480.68 378.5 2530.5 292.5"/>
             <g id="octet_box" data-attach="#_36" class="attached">
                 <polygon id="_36" data-name="36" class="cls-2 project_box_product has_link" points="2472.84 215.5 2378.16 215.5 2330.82 297.5 2378.16 379.5 2472.84 379.5 2520.18 297.5 2472.84 215.5"/>
-                <text x="2000" y="235" data-x-rel="-120" id="uda1" class="casestudy"><a href="https://github.com/aartics/octet_truss_block" target="_blank">PRODUCT:</a></text>
-                <text x="2000" y="330" data-x-rel="-150" id="uda1" class="projectname"><a href="https://github.com/aartics/octet_truss_block" target="_blank">octet truss</a></text>
-                <text x="2000" y="350" data-x-rel="-130" id="uda1" class="projectname"><a href="https://github.com/aartics/octet_truss_block" target="_blank">block</a></text>
+                <text x="2000" y="235" data-x-rel="-120" id="uda1" class="casestudy"><a href="projects/octet" target="_blank">PRODUCT:</a></text>
+                <text x="2000" y="330" data-x-rel="-150" id="uda1" class="projectname"><a href="projects/octet" target="_blank">octet truss</a></text>
+                <text x="2000" y="350" data-x-rel="-130" id="uda1" class="projectname"><a href="projects/octet" target="_blank">block</a></text>
             </g>
             <polygon id="_46" data-name="46" class="cls-2" points="2578.36 293.5 2477.33 293.5 2426.81 381 2477.33 468.5 2578.36 468.5 2628.88 381 2578.36 293.5"/>
 
@@ -341,8 +341,8 @@
 
             <g id="graphics_box" data-attach="#_40" class="attached">
                 <text x="2000" y="490" data-x-rel="-130" id="gra1" class="casestudy"><a href="projects/graphics" target="_blank">GRAPHICS:</a></text>
-                <text x="2000" y="580" data-x-rel="-185" id="gra2" class="projectname"><a href="projects/graphics" target="_blank">self-development</a></text>
-                <text x="2000" y="600" data-x-rel="-135" id="gra3" class="projectname"><a href="projects/graphics" target="_blank">clipart</a></text>
+                <text x="2000" y="580" data-x-rel="-155" id="gra2" class="projectname"><a href="projects/graphics" target="_blank">clipart for</a></text>
+                <text x="2000" y="600" data-x-rel="-165" id="gra3" class="projectname"><a href="projects/graphics" target="_blank">enablement</a></text>
             </g>
 
             <g id="octet_box" data-attach="#_44" class="attached">
