--- a/aartics/projects/mumbai/index.htm
+++ b/aartics/projects/mumbai/index.htm
@@ -19,7 +19,34 @@
   </div>
 </div>
 
+<div id="project-content">
+  <img id="cover" src="local_img/001.png"/>
+  <div class="image-title">
+  This is a pic
+  </div>
+  <img src="local_img/002_mumbai_intro.png">
 
+  <div class="image-title">
+  This is a pic
+  </div>
+  <img src="local_img/view.jpg">
+  <div class="image-title">
+  This is a pic
+  </div>
+  <img src="local_img/plan.jpg">
+  <div class="image-title">
+  This is a pic
+  </div> 
+  <img src="local_img/pg1.jpg">
+  <div class="image-title">
+  This is a pic
+  </div> 
+  <img src="local_img/pg2.jpg">
+  <div class="image-title">
+  This is a pic
+  </div> 
+  <img src="local_img/mumbai_end.png">
+</div>
 
 
   <script>
