--- a/aartics/projects/octet/index.htm
+++ b/aartics/projects/octet/index.htm
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>aartics_graphics</title>
+  <title>aartics_octet</title>
   <meta name="aartics portfolio" content="aartics portfolio">
   <meta name="aarti c sharma" content="aartics_portfolio">
   <link rel="stylesheet" href="../aartics_projects.css">
@@ -14,22 +14,30 @@
   <div id="header-banner">
     <div id="back-button"><a href="aartics.com">Back</a></div>
     <span class="project-name">
-      graphics for self-enablement
+      3D print octet truss
     </span>
   </div>
 </div>
 
 <div id="project-content">
   <img id="cover" src="local_img/001.png"/>
+  <div class="image-title">
+  This is a pic
+  </div>
+  <img src="local_img/01.png">
 
   <div class="image-title">
   This is a pic
   </div>
-  <img src="local_img/001_clipart.png">
+  <img src="local_img/02.png">
   <div class="image-title">
   This is a pic
   </div>
-  <img src="local_img/logos.png">
+  <img src="local_img/03.jpg">
+  <div class="image-title">
+  This is a pic
+  </div> 
+  <img src="local_img/04.png">
 </div>
 
 
