--- a/aartics/index.htm
+++ b/aartics/index.htm
@@ -8,6 +8,9 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="js/jquery.jInvertScroll.js"></script>
     <link rel="stylesheet" href="css/aartics.css" />
+    <link rel="icon" 
+      type="image/png" 
+      href="favico.png">
 </head>
 <body>
     <div class="bigheader">
