--- a/aartics/projects/octet/index.htm
+++ b/aartics/projects/octet/index.htm
@@ -7,6 +7,7 @@
   <meta name="aartics portfolio" content="aartics portfolio">
   <meta name="aarti c sharma" content="aartics_portfolio">
   <link rel="stylesheet" href="../aartics_projects.css">
+  <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
 </head>
 
 <body>
@@ -19,10 +20,17 @@
   </div>
 </div>
 
-<div id="project-content">
+<section class="cover">
   <img id="cover" src="local_img/001.png"/>
+<h1>hello world</h1>
+</section>
+
+
+<div id="project-content">
+
   <div class="image-title">
   This is a pic
+  <p>this is some text</p>
   </div>
   <img src="local_img/01.png">
 
