fixed #7 and fixed #9

--- a/aartics/index.htm
+++ b/aartics/index.htm
@@ -65,13 +65,13 @@
                 <polygon id="_49" data-name="49" class="cls-2 project_box_soft has_link" points="2716.96 301.5 2628.04 301.5 2583.59 378.5 2628.04 455.5 2716.96 455.5 2761.41 378.5 2716.96 301.5"/>
                 <text x="2000" y="410" data-x-rel="-130" id="linkedinlink" class="projectname"><a href="https://www.linkedin.com/in/aartics" target="_blank">linkedin</a></text>            
             </g>
+            <polygon id="s85" class="cls-1" points="2651.5 621.5 2706.5 647.5 2654.5 557.5 2605.5 541.5 2651.5 621.5"/>
+            <polygon id="s66" class="cls-1" points="2670.5 463.5 2706.5 468.5 2654.5 557.5 2622.5 546.5 2670.5 463.5"/>
+            <polygon id="_42" data-name="42" class="cls-2" points="2665.48 541.5 2572.52 541.5 2526.05 622 2572.52 702.5 2665.48 702.5 2711.95 622 2665.48 541.5"/>
             <g id="github_box" data-attach="#_48" class="attached raleway">
                 <polygon id="_48" data-name="48" class="cls-2 project_box_soft has_link" points="2809.67 468.5 2706.33 468.5 2654.65 558 2706.33 647.5 2809.67 647.5 2861.35 558 2809.67 468.5"/>
                 <text x="2000" y="610" data-x-rel="-130" id="gitlink" class="projectname"><a href="https://github.com/aartics" target="_blank">github</a></text>
             </g>
-            <polygon id="s85" class="cls-1" points="2651.5 621.5 2706.5 647.5 2654.5 557.5 2605.5 541.5 2651.5 621.5"/>
-            <polygon id="s66" class="cls-1" points="2670.5 463.5 2706.5 468.5 2654.5 557.5 2622.5 546.5 2670.5 463.5"/>
-            <polygon id="_42" data-name="42" class="cls-2" points="2665.48 541.5 2572.52 541.5 2526.05 622 2572.52 702.5 2665.48 702.5 2711.95 622 2665.48 541.5"/>
             <g id="resume_box" data-attach="#_51" class="attached raleway">    
                 <polygon id="_51" data-name="51" class="cls-2 project_box_soft has_link" points="2615.05 50.5 2520.95 50.5 2473.89 132 2520.95 213.5 2615.05 213.5 2662.11 132 2615.05 50.5"/>
                 <text x="2000" y="170" data-x-rel="-130" id="resumelink" class="projectname"><a href="aartics_resume.pdf" target="_blank">resume</a></text>
@@ -118,7 +118,11 @@
                 <text x="2000" y="250" data-x-rel="-155" id="barc1" class="projectname"><a href="projects/barcelona" target="_blank">la ciudad idea</a></text>
                 <text x="2000" y="270" data-x-rel="-140" id="barc2" class="projectname"><a href="projects/barcelona" target="_blank">barcelona</a></text>
             </g>
-            <polygon id="_28" data-name="28" class="cls-2" points="1969.42 215.5 1873.58 215.5 1825.66 298.5 1873.58 381.5 1969.42 381.5 2017.34 298.5 1969.42 215.5"/>
+            <g id="arch_dl_box" data-attach="#_28" class="attached">
+                <polygon id="_28" data-name="28" class="cls-2 project_box_arch has_link" points="1969.42 215.5 1873.58 215.5 1825.66 298.5 1873.58 381.5 1969.42 381.5 2017.34 298.5 1969.42 215.5"/>
+                <text x="2000" y="240" data-x-rel="-137" id="arctitle" class="casestudy"><a href="projects/aartics_architecture.pdf" target="_blank">ARCHITECTURE:</a></text>
+                <text x="2000" y="340" data-x-rel="-135" id="arc1" class="projectname"><a href="projects/aartics_architecture.pdf" target="_blank">portfolio</a></text>
+            </g>
             <polygon id="_32" data-name="32" class="cls-2" points="2237.48 543.5 2144.52 543.5 2098.05 624 2144.52 704.5 2237.48 704.5 2283.95 624 2237.48 543.5"/>
             <polygon id="yy4" class="cls-1" points="2175.5 539.5 2231.5 556.5 2282.5 645.5 2225.5 623.5 2175.5 539.5"/>
             <polygon id="s74" class="cls-1" points="2199.5 215.5 2191.5 224.5 2234.5 147.5 2246.5 133.5 2199.5 215.5"/>
@@ -258,9 +262,9 @@
                 <text x="587" y="635" data-x-rel="-135" id="3d14" class="projectname"><a href="projects/aartics_concept" target="_blank">website</a></text>
             </g>
             <g id="arch_urb_box" data-attach="#_24" class="attached">
-                <polygon id="_24" data-name="24" class="cls-2 project_box_arch has_link" points="1683.91 64.5 1562.09 64.5 1501.18 170 1562.09 275.5 1683.91 275.5 1744.82 170 1683.91 64.5"/>
-                <text x="2000" y="170" data-x-rel="-190" id="arch1" class="titlearch has_link"><a href="projects/aartics_architecture.pdf" target="_blank">architecture &amp;</a></text>
-                <text x="2000" y="190" data-x-rel="-170" id="arch2" class="titlearch has_link"><a href="projects/aartics_architecture.pdf" target="_blank">urbanism</a></text>
+                <polygon id="_24" data-name="24" class="cls-2" points="1683.91 64.5 1562.09 64.5 1501.18 170 1562.09 275.5 1683.91 275.5 1744.82 170 1683.91 64.5"/>
+                <text x="2000" y="170" data-x-rel="-190" id="arch1" class="titlearch">architecture &amp;</text>
+                <text x="2000" y="190" data-x-rel="-170" id="arch2" class="titlearch">urbanism</text>
             </g>
             <polygon id="_20" data-name="20" class="cls-2" points="1500.5 380.51 1378.5 380.51 1317.5 486.17 1378.5 591.82 1500.5 591.82 1561.5 486.17 1500.5 380.51"/>
             <polygon id="xx05" class="cls-1" points="2225.5 556.5 2191.5 545.5 2239.5 462.5 2276.5 468.5 2225.5 556.5"/>
@@ -356,17 +360,17 @@
             </g>
 
             <g id="credits">
-                <text x="2780" y="490" id="creditsa">i designed and made</text>
-                <text x="2780" y="510" id="credits0">this 3d interaction with:</text>
+                <text x="2780" y="490" id="creditsa">i designed and made this</text>
+                <text x="2780" y="510" id="credits0">3d interactive prototype with:</text>
                 <text x="2780" y="530" id="credits1">---------------------------------</text>
                 <text x="2800" y="550" id="credits2">sketchup</text>
                 <text x="2800" y="570" id="credits3">photoshop</text>
                 <text x="2800" y="590" id="credits4">illustrator</text>
-                <text x="2800" y="610" id="credits5">svg</text>
+                <text x="2800" y="610" id="credits5">html </text>
                 <text x="2800" y="630" id="credits5">javascript</text>
                 <text x="2800" y="650" id="credits6">css</text>
-                <text x="2800" y="670" id="credits7">github</text>
-                <text x="2780" y="690" id="credits8">---------------------------------</text>
+                <text x="2780" y="670" id="credits8">---------------------------------</text>
+                <text x="2780" y="690" id="credits7"><a href="https://github.com/aartics/aartics_portfolio/issues" target="_blank">get the files on github</a></text>
                 <text x="2780" y="710" id="credits9">special shout-out to @owings1</text>
                 <text x="2780" y="730" id="credits10">---------------------------------</text>
             </g> 
