--- a/aartics/index.htm
+++ b/aartics/index.htm
@@ -26,6 +26,8 @@
     <div class="backgroundgrad"></div>
     <div class="horizon scroll">
         <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="3000px" height="760" id="bigsvg">
+            <polygon id="k01" class="cls-1" points="2557.5 378.5 2695.5 378.5 2845.5 120.5 2562.5 222.5 2512.5 301.5 2557.5 378.5"/>
+            <polygon id="k02" class="cls-1" points="2512.5 455.5 2657.5 558.5 2845.5 636.5 2695.5 378.5 2557.5 378.5 2512.5 455.5"/>
             <polygon id="s95" class="cls-1" points="2513.5 459.5 2548.5 463.5 2596.5 546.5 2558.5 538.5 2513.5 459.5"/>
             <polygon id="s37" class="cls-1" points="1731.5 648.5 1676.5 622.5 1628.5 539.5 1679.5 559.5 1731.5 648.5"/>
             <polygon id="yy2" class="cls-1" points="2099.5 623.5 1960.5 566.5 1994.5 501.5 2145.5 544.5 2099.5 623.5"/>
@@ -254,11 +256,11 @@
                 </clipPath>
                 <image width="350" height="300" x="420" y="430" data-x-rel="-300" xlink:href="../img/3d_intro.png" class="image" id="3dimg"/>
                 <polygon id="_3" data-name="3" class="cls-2 project_box has_link" points="658.07 488.5 533.93 488.5 471.87 596 533.93 703.5 658.07 703.5 720.13 596 658.07 488.5"/>
-                <text x="500" y="575" data-x-rel="-200" id="3d9" class="projectname"><a href="projects/aartics_concept" target="_blank">designing</a></text>
+                <text x="500" y="575" data-x-rel="-200" id="3d9" class="projectname"><a href="projects/aartics_concept" target="_blank">making</a></text>
                 <text x="620" y="575" data-x-rel="-100" id="3d10" class="projectname"><a href="projects/aartics_concept" target="_blank">a 3D +</a></text>
-                <text x="500" y="605" data-x-rel="-210" id="3d11" class="projectname"><a href="projects/aartics_concept" target="_blank">inverse +</a></text>
+                <text x="500" y="605" data-x-rel="-230" id="3d11" class="projectname"><a href="projects/aartics_concept" target="_blank">hexagonal</a></text>
                 <text x="602" y="605" data-x-rel="-120" id="3d12" class="projectname"><a href="projects/aartics_concept" target="_blank">panaromic</a></text>
-                <text x="500" y="635" data-x-rel="-170" id="3d13" class="projectname"><a href="projects/aartics_concept" target="_blank">=D</a></text>
+                <text x="500" y="635" data-x-rel="-170" id="3d13" class="projectname"><a href="projects/aartics_concept" target="_blank"></a></text>
                 <text x="587" y="635" data-x-rel="-135" id="3d14" class="projectname"><a href="projects/aartics_concept" target="_blank">website</a></text>
             </g>
             <g id="arch_urb_box" data-attach="#_24" class="attached">
@@ -269,7 +271,6 @@
             <polygon id="_20" data-name="20" class="cls-2" points="1500.5 380.51 1378.5 380.51 1317.5 486.17 1378.5 591.82 1500.5 591.82 1561.5 486.17 1500.5 380.51"/>
             <polygon id="xx05" class="cls-1" points="2225.5 556.5 2191.5 545.5 2239.5 462.5 2276.5 468.5 2225.5 556.5"/>
             <polygon id="_40" data-name="40" class="cls-2 project_box_product has_link" points="2379.09 468.5 2276.91 468.5 2225.81 557 2276.91 645.5 2379.09 645.5 2430.19 557 2379.09 468.5"/>
-            <polygon id="s86" class="cls-1" points="2478.5 293.5 2584.5 273.5 2705.5 273.5 2579.5 293.5 2478.5 293.5"/>
             <polygon id="xx02" class="cls-1" points="2530.5 292.5 2519.5 297.5 2471.5 379.5 2480.68 378.5 2530.5 292.5"/>
             <g id="octet_box" data-attach="#_36" class="attached">
                 <polygon id="_36" data-name="36" class="cls-2 project_box_product has_link" points="2472.84 215.5 2378.16 215.5 2330.82 297.5 2378.16 379.5 2472.84 379.5 2520.18 297.5 2472.84 215.5"/>
@@ -278,6 +279,7 @@
                 <text x="2000" y="350" data-x-rel="-130" id="uda1" class="projectname"><a href="projects/octet" target="_blank">block</a></text>
             </g>
             <polygon id="_46" data-name="46" class="cls-2" points="2578.36 293.5 2477.33 293.5 2426.81 381 2477.33 468.5 2578.36 468.5 2628.88 381 2578.36 293.5"/>
+            <polygon id="s86" class="cls-1" points="2478.5 293.5 2584.5 273.5 2705.5 273.5 2579.5 293.5 2478.5 293.5"/>
 
             <g id="contact_box" data-attach="#_1" class="attached" style="clip-path: url(#clipPath_contact_box);" data-clip-path="#clipPath_contact_box">
             <clipPath id="clipPath_contact_box">
@@ -359,21 +361,25 @@
                 <text x="2000" y="190" data-x-rel="-160" id="oct3" class="titleengg">engineer</text>
             </g>
 
-            <g id="credits">
-                <text x="2780" y="490" id="creditsa">i designed and made this</text>
-                <text x="2780" y="510" id="credits0">3d interactive prototype with:</text>
-                <text x="2780" y="530" id="credits1">---------------------------------</text>
-                <text x="2800" y="550" id="credits2">sketchup</text>
-                <text x="2800" y="570" id="credits3">photoshop</text>
-                <text x="2800" y="590" id="credits4">illustrator</text>
-                <text x="2800" y="610" id="credits5">html </text>
-                <text x="2800" y="630" id="credits5">javascript</text>
-                <text x="2800" y="650" id="credits6">css</text>
-                <text x="2780" y="670" id="credits8">---------------------------------</text>
-                <text x="2780" y="690" id="credits7"><a href="https://github.com/aartics/aartics_portfolio/issues" target="_blank">get the files on github</a></text>
-                <text x="2780" y="710" id="credits9">special shout-out to @owings1</text>
-                <text x="2780" y="730" id="credits10">---------------------------------</text>
+            <g id="credits_box" data-attach="#c1" class="attached">
+                <polygon id="c1" class="cls-2" points="3292.5 378.97 3143.56 636.95 2845.22 636.57 2695.84 378.78 2845.22 121 3143.56 121 3292.5 378.97"/>
+                <text x="3000" y="280" data-x-rel="-500" id="credits13" class="credits">ARTICLE:</text>
+                <text x="3000" y="305" data-x-rel="-500" id="credits11" class="creditsa">prototyping for VR</text>
+                <text x="3000" y="325" data-x-rel="-500" id="credits12" class="creditsa">in a browser</text>
+                <text x="3000" y="355" data-x-rel="-500" id="creditsa" class="credits">i designed and made this</text>
+                <text x="3000" y="375" data-x-rel="-500" id="credits0" class="credits">3d interactive prototype with:</text>
+                <text x="3000" y="395" data-x-rel="-500" id="credits1" class="credits">-------------------------------------</text>
+                <text x="3000" y="415" data-x-rel="-470" id="credits2" class="credits">sketchup 3D</text>
+                <text x="3000" y="435" data-x-rel="-470" id="credits3" class="credits">photoshop | illustrator</text>
+                <text x="3000" y="455" data-x-rel="-470" id="credits4" class="credits">html | css</text>
+                <text x="3000" y="475" data-x-rel="-470" id="credits5" class="credits">javascript </text>
+                <text x="3000" y="495" data-x-rel="-470" id="credits5" class="credits">---------------------------------</text>
+                <text x="3000" y="515" data-x-rel="-470" id="credits7" class="credits"><a href="https://github.com/aartics/aartics_portfolio" target="_blank">get the files on github</a></text>
+                <text x="3000" y="535" data-x-rel="-470" id="credits9" class="credits">special shout-out to @owings1</text>
+                <text x="3000" y="555" data-x-rel="-470" id="credits10" class="credits">---------------------------------</text>
+                <text x="3000" y="575" data-x-rel="-470" id="credits14" class="credits">&copy; copyright aartics 2017</text>
             </g> 
+<!--             <polygon id="bee2" class="cls-4" points="739.75 531.5 733.6 506.22 729.5 515.1 734.28 495.97 739.75 489.82 745.22 495.97 750 512.37 743.85 506.22 739.75 531.5"/>            <defs> -->
             <defs>
                 <radialGradient id="exampleGradient">
                   <stop offset="88%" stop-color="cyan"/>
