resonateai case study done

--- a/aartics/projects/resonateai/index.htm
+++ b/aartics/projects/resonateai/index.htm
@@ -12,7 +12,7 @@
 <body>
 <div id="header-wrapper">
   <div id="header-banner">
-    <div id="back-button"><a href="aartics.com">Back</a></div>
+    <div id="back-button"><a href="http://www.aartics.com">Back</a></div>
     <span class="project-name">
       resonate.ai
     </span>
@@ -23,41 +23,68 @@
   <img id="cover" src="local_img/001.png"/>
 
   <div class="image-title">
-  This is a pic
+  Resonate.ai - Before
   </div>
-  <video width="740" height="600" autoplay controls loop>
-    <source src="https://s3-us-west-2.amazonaws.com/aartics-portfolio/projects/resonateai/img/resonate_editor_final.mp4" type="video/mp4">
-  </video>
+  <img src="local_img/res_before_01.png">
   <div class="image-title">
-  This is a pic
+  Resonate.ai - After
+  </div>
+  <img src="local_img/res_after_01.png">
+
+  <div class="image-title">
+  Market Research<br>
+  <h2>Competitive and Comparative Analysis</h2>
+  <p>Studied current competitors, inline text editors and document composers. Also studied MailChimp's product voice and tone guide.</p>
+  <p>Outcomes: Cleaner visualization of an inline text editor, idea of delightful interaction including clear tonality guide, and Key features needed for the product.</p>
   </div>
   <img src="local_img/resonate_comp_analysis.png">
   <div class="image-title">
-  This is a pic
+  Personas
+  <p><br>Developed key personas for members of a financial startup and identified their habits, goals, and needs.</p>
   </div>
-  <img src="local_img/resonate_personas.png">
+  <img src="local_img/res_user_personas.png">
+
   <div class="image-title">
-  This is a pic
+  User testing with paper prototype
+  <p><br>Quick paper prototype was used in early usability testing, leading to identification of new features and clear prioritization among them. <br><br> This also led us to research on simplifying the tonality.</p>
+  </div>
+  <img src="local_img/resonate_paper_prototype.jpg">
+
+
+  <div class="image-title">
+  Restructuring tonality:
+  <p><br>User research led us to remove  non measurable tones like "joy", "anticipation", and "popularity" from the previous list. Simplified the classes, classified it under 'Persuation' and 'Moments'. <br> <br>Final product scored users on "Trust", "Confidence", and "Likability", leading to better resonance with the audience.</p>
+
+  </div>
+  <img src="local_img/res_structural_change.png">
+
+
+  <div class="image-title">
+  More prototyping
+  <h2>Clickable slide-based prototypes for gathering feedback</h2>
+  </div>
+  <img src="local_img/res_more_prototyping.png">
+
+  <div class="image-title">
+  Product mockup
   </div> 
   <video width="740" height="600" autoplay controls loop>
-    <source src="https://s3-us-west-2.amazonaws.com/aartics-portfolio/projects/resonateai/img/resonate_strategy.mp4" type="video/mp4">
+    <source src="https://s3-us-west-2.amazonaws.com/aartics-portfolio/projects/resonateai/img/resonate_editor_final.mp4" type="video/mp4">
   </video>
+  
   <div class="image-title">
-  This is a pic
-  </div> 
-  <img src="local_img/resonate_product_roadmap.png">
-  <div class="image-title">
-  This is a pic
+  Feature and User Flow Map
+<!--   <h2>Feature and User flow Map</h2> -->
+  <p> <br>Additionally, I generated 'user flow' map for developers to easily understand the complete product flows and scope the development efforts requried in engineering the product.</p>
   </div> 
   <img src="local_img/resonate_structural_flows.png">
+
   <div class="image-title">
-  This is a pic
+  Product Roadmap 
+  <!--<h2> Product Roadmap</h2>-->
+  <p> Additionally synthesized the complete research and ideas into a phase-wise product roadmap. This included creation of an clear vision and feature plan for an Enterprise version for the startup product.</p>
   </div> 
-  <img src="local_img/resonate_chrome_mockup.png">
-  <div class="image-title">
-  This is a pic
-  </div> 
-  <img src="local_img/resonate_interview.png">
+  <img src="local_img/resonate_product_roadmap.png">
 </div>
 
 
